2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/20_cat_int_vers_float.deca
// Description :
//     initaliser un float par un int  
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024

{
    float f = 12;
    
}