2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/49_unrauminus_float_aff_int.deca
// Description :
//      affécatation de unray Minus devant float dans un int  
// Resultats :
//    Erreur Contexteulle : ligne 11 :  le float ne peut pas être affecté à int
//
// Historique :
// cree le 10/01/2024

{
    int i ;
    i = - 12.14 ;
}